--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,6 @@
     <string name="interstitial_button_text">Show Interstitial Ad</string>
     <string name="second_activity_title">SecondActivity</string>
     <string name="second_activity_content">This is the second activity.</string>
-    <string name="banner_ad_unit_id">ca-app-pub-3940116301233519/4198407497</string>
+    <string name="banner_ad_unit_id">ca-app-pub-2609666985136692/9297821359</string>
+        <!--ca-app-pub-3940256099942544/6300978111 TestID-->
 </resources>
