--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,14 @@
     <string name="interstitial_button_text">Show Interstitial Ad</string>
     <string name="second_activity_title">SecondActivity</string>
     <string name="second_activity_content">This is the second activity.</string>
-    <string name="banner_ad_unit_id">ca-app-pub-2609666985136692/9297821359</string>
-        <!--ca-app-pub-3940256099942544/6300978111 TestID-->
+
+    <string name="admob_app_id">ca-app-pub-2609666985136692~3212334368</string>
+    <string name="banner_ad_unit_id">ca-app-pub-2609666985136692/9712770819</string>
+    <string name="interstitial_ad">ca-app-pub-2609666985136692/1654672618</string>
+
+    // testing ids
+    <!--<string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>-->
+    <!--<string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->
+    <!--<string name="interstitial_ad">ca-app-pub-3940256099942544/1033173712</string>-->
+    
 </resources>
