--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,6 @@
     <!--<string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>-->
     <!--<string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->
     <!--<string name="interstitial_ad">ca-app-pub-3940256099942544/1033173712</string>-->
-    
+
+    <string name="please_grant_all_permissions">Insufficient privileges. Please grant all permissions.</string>
 </resources>
