1. HomeActivity.java: Added now playing area at the bottom of activity 2. MusicPlayerActivity.java:    i.Song will play if go back    ii. Song will stop while incoming calls    iii. code refactoring 3. SplashScreen.java: Added Read Phone state permission to check incoming calls

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,12 @@
     <!--<string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->
     <!--<string name="interstitial_ad">ca-app-pub-3940256099942544/1033173712</string>-->
 
+
+    <!--// Ganapati aarti test ids
+    <string name="admob_app_id">ca-app-pub-2609666985136692~4976099823</string>
+    <string name="banner_ad_unit_id">ca-app-pub-2609666985136692/1775221418</string>
+    <string name="interstitial_ad">ca-app-pub-2609666985136692/5929609913</string>-->
+
+
     <string name="please_grant_all_permissions">Insufficient privileges. Please grant all permissions.</string>
 </resources>
