--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,9 +20,9 @@
     <string name="interstitial_ad">ca-app-pub-2609666985136692/1654672618</string>
 
     // testing ids
-    <!--<string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>-->
-    <!--<string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->
-    <!--<string name="interstitial_ad">ca-app-pub-3940256099942544/1033173712</string>-->
+    <!--<string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
+    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="interstitial_ad">ca-app-pub-3940256099942544/1033173712</string>-->
 
 
     <!--// Ganapati aarti test ids
