--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,17 @@
 
 
     <string name="please_grant_all_permissions">Insufficient privileges. Please grant all permissions.</string>
+    <string name="devi_bhajan">Devi Bhajan</string>
+    <string name="hindi_aarti">Hindi Aarti</string>
+    <string name="marathi_aarti">Marathi Aarti</string>
+    <string name="our_apps">Our Apps</string>
+    <string name="feedback">Feedback</string>
+    <string name="share_app">Share App</string>
+    <string name="update_app">Update App</string>
+    <string name="exit">Exit</string>
+    <string name="hindi_aarti_in_eng">HIN Aarti In ENG</string>
+    <string name="marathi_aarti_in_eng">MAR Aarti In ENG</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
