1. Changed MusicPlayer design

--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -22,24 +22,24 @@
     <string name="title_send_feedback">प्रतिक्रिया भेजें</string>
     <string name="now_playing">अभी का गाना</string>
 
-    <string name="ambe_tu_hai">अम्बे तू है जगदम्बे काली</string>
+    <string name="ambe_tu_hai">अम्बे तू है जगदम्बे काली जय दुर्गे</string>
     <string name="bheja_hai_bulava_tune">भेजा है बुलावा तूने शेरावालिये</string>
     <string name="bhor_bhai_din_char">भोर भाई दिन चार गया मेरी अम्बे</string>
-    <string name="bigdi_meri_bana">बिगड़ी मेरी बना दे</string>
-    <string name="chalo_bulava_aaya">चलो बुलावा आया है</string>
-    <string name="durga_hai_meri">दुर्गा है मेरी माँ</string>
+    <string name="bigdi_meri_bana">बिगड़ी मेरी बना दे ओ शेरावाली मैया</string>
+    <string name="chalo_bulava_aaya">चलो बुलावा आया है माता ने</string>
+    <string name="durga_hai_meri">दुर्गा है मेरी माँ अम्बे है मेरी माँ</string>
     <string name="hey_naam_re_sabse">हे नाम रे सबसे बड़ा तेरा नाम</string>
-    <string name="maa_sun_le_pukar">माँ सुन ले पुकार</string>
-    <string name="maiya_ka_chola">मैया का चोला है रंगला</string>
-    <string name="maiya_main_nihal">मैया मै निहाल हो गया</string>
+    <string name="maa_sun_le_pukar">माँ सुन ले पुकार मैं आया तेरे द्वार</string>
+    <string name="maiya_ka_chola">मैया का चोला है रंगला शेरावाली</string>
+    <string name="maiya_main_nihal">मैया मै निहाल हो गया सब कर दे</string>
     <string name="man_tera_mandir">मन तेरा मंदिर आँखे दिया</string>
     <string name="main_toh_aarti_utaru">मैं तोह आरती उतारू रे संतोषी माता की</string>
     <string name="meri_akhiyon_ke_samne">मेरी आखों के सामने ही रहना</string>
     <string name="meri_jholi_chhoti">मेरी झोली छोटी पड़ गयी रे</string>
     <string name="na_main_mangu">ना मैं मांगू सोना देवी भजन</string>
-    <string name="pyara_saja_hai">प्यारा सजा है तेरा द्वार</string>
-    <string name="sher_pe_sawar">शेर पे सवार होके</string>
-    <string name="suno_suno_ek">सुनो सुनो एक कहानी</string>
+    <string name="pyara_saja_hai">प्यारा सजा है तेरा द्वार भवानी</string>
+    <string name="sher_pe_sawar">शेर पे सवार होके आजा शेरावालिये</string>
+    <string name="suno_suno_ek">सुनो सुनो एक कहानी सुनो सुनो</string>
     <string name="tune_mujhe_bulaya">तूने मुझे बुलाया शेरावालिये</string>
     <string name="yahaan_wahaan_apni">यहां वहाँ अपनी संतोषी माँ</string>
 </resources>
