--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,24 +42,24 @@
     <string name="now_playing">Now Playing</string>
 
 
-    <string name="ambe_tu_hai">Ambe Tu Hai Jagdambe Kali</string>
+    <string name="ambe_tu_hai">Ambe Tu Hai Jagdambe Kali Jay Durge</string>
     <string name="bheja_hai_bulava_tune">Bheja Hai Bulava Tune Sherawaliye</string>
     <string name="bhor_bhai_din_char">Bhor Bhai Din Char Gaya Meri Ambe</string>
-    <string name="bigdi_meri_bana">Bigdi Meri Bana De</string>
-    <string name="chalo_bulava_aaya">Chalo Bulava Aaya Hai</string>
-    <string name="durga_hai_meri">Durga Hai Meri Maa</string>
+    <string name="bigdi_meri_bana">Bigdi Meri Bana De O Sherawali</string>
+    <string name="chalo_bulava_aaya">Chalo Bulava Aaya Hai Mata Ne</string>
+    <string name="durga_hai_meri">Durga Hai Meri Maa Ambe Hai Meri Maa</string>
     <string name="hey_naam_re_sabse">Hey Naam Re Sabse Bada Tera Naam</string>
-    <string name="maa_sun_le_pukar">Maa Sun Le Pukar</string>
-    <string name="maiya_ka_chola">Maiya Ka Chola Hai Rangla</string>
-    <string name="maiya_main_nihal">Maiya Main Nihaal Ho Gaya</string>
+    <string name="maa_sun_le_pukar">Maa Sun Le Pukar Main Aaya Tere Dwar</string>
+    <string name="maiya_ka_chola">Maiya Ka Chola Hai Rangla Sherawali</string>
+    <string name="maiya_main_nihal">Maiya Main Nihaal Ho Gaya Sab Kar de</string>
     <string name="man_tera_mandir">Man Tera Mandir Aankhe Diya</string>
     <string name="main_toh_aarti_utaru">Main Toh Aarti Utaru Re Santoshi Mata Ki</string>
     <string name="meri_akhiyon_ke_samne">Meri Akhiyon Ke Samne Hi Rehna</string>
     <string name="meri_jholi_chhoti">Meri Jholi Chhoti Pad Gayee Re</string>
     <string name="na_main_mangu">Na Main Mangu Sona Devi Bhajan</string>
-    <string name="pyara_saja_hai">Pyara Saja Hai Tera Dwar</string>
-    <string name="sher_pe_sawar">Sher Pe Sawar Hoke</string>
-    <string name="suno_suno_ek">Suno Suno Ek Kahani</string>
+    <string name="pyara_saja_hai">Pyara Saja Hai Tera Dwar Bhavani</string>
+    <string name="sher_pe_sawar">Sher Pe Sawar Hoke Aaja Sherawaliye</string>
+    <string name="suno_suno_ek">Suno Suno Ek Kahani Suno Suno</string>
     <string name="tune_mujhe_bulaya">Tune Mujhe Bulaya Sherawaliye</string>
     <string name="yahaan_wahaan_apni">Yahaan Wahaan Apni Santoshi Maa</string>
 </resources>
