removed marathi language support(string.xml_mar), marathi aartis and unwanted icons of god

--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -3,8 +3,7 @@
     <string name="app_name">भजन आरती</string>
 
     <string name="devi_bhajan">देवी भजन</string>
-    <string name="hindi_aarti">हिंदी आरती</string>
-    <string name="marathi_aarti">मराठी आरती</string>
+    <string name="devi_aarti">देवी आरती</string>
     <string name="our_apps">हमारे ऐप्स</string>
     <string name="feedback">प्रतिक्रिया</string>
     <string name="share_app">ऐप शेयर करें</string>
