Added Navaratri aarti section

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="interstitial_ad">ca-app-pub-2609666985136692/5929609913</string>-->
 
     <string name="devi_bhajan">Devi Bhajan</string>
-    <string name="devi_aarti">Devi Aarti</string>
+    <string name="devi_aarti">Hindi Aarti</string>
     <string name="our_apps">Our Apps</string>
     <string name="feedback">Feedback</string>
     <string name="share_app">Share App</string>
