--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name">Bhajan Aarti</string>
 
     <string name="devi_bhajan">Devi Bhajan</string>
-    <string name="devi_aarti">Devi Aarti</string>
+    <string name="devi_aarti">Hindi Aarti</string>
     <string name="our_apps">Our Apps</string>
     <string name="feedback">Feedback</string>
     <string name="share_app">Share App</string>
