1. Added bhajan "aa maa aa tujhe" and "main balak tu mata"

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -21,6 +21,7 @@
 
     <string name="now_playing">Now Playing</string>
 
+    <string name="aa_maa_aa_tujhe">Aa Maa Aa Tujhe Dil Ne Pukara</string>
     <string name="ambe_tu_hai">Ambe Tu Hai Jagdambe Kali Jay Durge</string>
     <string name="bheja_hai_bulava_tune">Bheja Hai Bulava Tune Sherawaliye</string>
     <string name="bhor_bhai_din_char">Bhor Bhai Din Char Gaya Meri Ambe</string>
@@ -33,6 +34,7 @@
     <string name="maiya_main_nihal">Maiya Main Nihaal Ho Gaya Sab Kar de</string>
     <string name="man_tera_mandir">Man Tera Mandir Aankhe Diya</string>
     <string name="main_toh_aarti_utaru">Main Toh Aarti Utaru Re Santoshi Mata Ki</string>
+    <string name="main_balak_tu_mata">Main Balak Tu Mata Sherawaliye</string>
     <string name="meri_akhiyon_ke_samne">Meri Akhiyon Ke Samne Hi Rehna</string>
     <string name="meri_jholi_chhoti">Meri Jholi Chhoti Pad Gayee Re</string>
     <string name="na_main_mangu">Na Main Mangu Sona Devi Bhajan</string>
