--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -21,6 +21,7 @@
     <string name="title_send_feedback">प्रतिक्रिया भेजें</string>
     <string name="now_playing">अभी का गाना</string>
 
+    <string name="aa_maa_aa_tujhe">आ माँ आ तुझे दिल ने पुकारा</string>
     <string name="ambe_tu_hai">अम्बे तू है जगदम्बे काली जय दुर्गे</string>
     <string name="bheja_hai_bulava_tune">भेजा है बुलावा तूने शेरावालिये</string>
     <string name="bhor_bhai_din_char">भोर भाई दिन चार गया मेरी अम्बे</string>
@@ -33,6 +34,7 @@
     <string name="maiya_main_nihal">मैया मै निहाल हो गया सब कर दे</string>
     <string name="man_tera_mandir">मन तेरा मंदिर आँखे दिया</string>
     <string name="main_toh_aarti_utaru">मैं तोह आरती उतारू रे संतोषी माता की</string>
+    <string name="main_balak_tu_mata">मैं बालक तू माता शेरावालिये</string>
     <string name="meri_akhiyon_ke_samne">मेरी आखों के सामने ही रहना</string>
     <string name="meri_jholi_chhoti">मेरी झोली छोटी पड़ गयी रे</string>
     <string name="na_main_mangu">ना मैं मांगू सोना देवी भजन</string>
